Fixes clipped h3 text

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -307,11 +307,11 @@ h3 {
 @media (min-width: 720px) {
   /* line 46, ../sass/demo-sass/_primary-demo.sass */
   h3 {
-    font-size: 2em;
-    line-height: 0.75em;
+    font-size: 1.5em;
+    line-height: 1em;
     margin-top: 0em;
     padding-top: 0em;
-    padding-bottom: 0.75em;
+    padding-bottom: 1em;
     margin-bottom: 0em;
   }
 }
